--- a/vignettes/ChromosomePlots.Rmd
+++ b/vignettes/ChromosomePlots.Rmd
@@ -73,7 +73,7 @@ genomeGRToWindows <- function(gr, windowSize=10000) {
 #tmp <- genomes$Oki |> BSgenomeToGR() |> genomeGRToWindows()
 #(tmp)
 (genomes$Oki |> BSgenomeToGR() |> genomeGRToWindows())
-# See also (genomes$Oki |> BSgenomeToGR() |> tile(w=10000)) |> unlist() |> unname()
+# See also genomes$Oki |> BSgenomeToGR() |> tile(w=10000) |> unlist() |> unname()
 
 # Generate counts and stats for a column within mcol(GRanges)
 mcolStats <- function(mcol, mcolName=NULL, windowSize=10000) {
@@ -99,103 +99,66 @@ mcolStats <- function(mcol, mcolName=NULL, windowSize=10000) {
 #(tmp2)
 (mcolStats(subsetByOverlaps(transcripts$Oki, tmp[65])$dNdS_HmmCleaner, mcolName = 'dNdS_HmmCleaner'))
 
-# Wrapper to calculate stats (i.e., mcolStats) on every column in a metadata GRanges
-mcolStatsArray <- function(meta, windowSize=10000, includeMetaCols=NULL) {
-  metaMcols <- mcols(meta)
-  metaMcolNames <- colnames(metaMcols)
-  # If metaCols is supplied, then only include metaCols in the array.
-  if(!is.null(includeMetaCols)){
-    metaMcolNames <- metaMcolNames[which(metaMcolNames %in% includeMetaCols)]
-  }
-  # For every remaining metadata column, calculate stats
-  mcolSA <- lapply(metaMcolNames, function(m) {
-    dat <- as.list(metaMcols[[m]])
-    names(dat) <- m
-    df <- mcolStats(metaMcols[[m]], mcolName=m, windowSize=windowSize)
-    df
-  })
-  mcolSA <- do.call(cbind, mcolSA)  |> DataFrame()
-  mcolSA
-}
-(mcolStatsArray(subsetByOverlaps(transcripts$Oki, tmp[30,])))
-
-# Separate function to make a fake stats dataframe with nothing in it
-mcolBlankArray <- function(meta, includeMetaCols=NULL){
-  metaMcols <- mcols(meta)
-  metaMcolNames <- colnames(metaMcols)
-  # If metaCols is supplied, then only include metaCols in the array.
-  if(!is.null(includeMetaCols)){
-    metaMcolNames <- metaMcolNames[which(metaMcolNames %in% includeMetaCols)]
-  }
-  # For every remaining metadata column, calculate stats
-  mcolSA <- lapply(metaMcolNames, function(m) {
-    dat <- as.list(metaMcols[[m]])
-    names(dat) <- m
-    df <- data.frame(matrix(0))
-    colnames(df)[1] = paste(m, 'count', sep='.')
-    df[[paste(m, 'count_norm', sep='.')]] = 0
-    df[[paste(m, 'mean', sep='.')]] = NA
-    df[[paste(m, 'median', sep='.')]] = NA
-    df[[paste(m, 'sd', sep='.')]] = NA
-    df
-  })
-  mcolSA <- do.call(cbind, mcolSA)  |> DataFrame()
-  mcolSA
-}
 tmp <- genomes$Oki |> BSgenomeToGR() |> genomeGRToWindows()
 (mcolBlankArray(subsetByOverlaps(transcripts$Oki, tmp[30:32])))
 
+# Match ranges to a single bin by reducing each range to its center.
+# Returns the index of the matched bins
+matchToOneBin <- function(ranges, bins) {
+  # Ensure that a range overlaps with only one bin
+  safeRanges <- ranges |> resize(1, fix="center")
+  o <- findOverlaps(safeRanges, bins, type = 'within')
+  subjectHits(o)
+}
+(matchToOneBin(transcripts$Oki, tmp))
+
+# Apply one function to data grouped by bins, and array it according to the
+# original bins (that is, insert NAs for bins that contained no data).
+# This function only works as intended if the bins fully tile the genome.
+binApply <- function(f, bins, data, index, ...) {
+  res <- rep(NA, length(bins))
+  vals <-tapply(data, index, f, ...)
+  res[as.numeric(names(vals))] <- unname(vals)
+  res
+}
+(binApply(mean, tmp, transcripts$Oki$dNdS_GUIDANCE2, matchToOneBin(transcripts$Oki, tmp), na.rm = TRUE))
 
 # Intersect each genome window with some other GRange (meta, as in metadata)
-metaPerWindow <- function(genomeWindows, meta, windowSize=10000, includeMetaCols=NULL) {
-  # For every genomic window...
-  #gwl <- BiocParallel::bplapply(1:length(genomeWindows), function(gw){
-  gwl <- lapply(1:length(genomeWindows), function(gw){
-    ovl <- subsetByOverlaps(meta, genomeWindows[gw,]) # Get metadata window aligning with genome window
-    if(length(ovl)==0){ # If there is no overlap between the GRanges, initialize a blank one
-      cur_window <- genomeWindows[gw,]
-      mc <- mcolBlankArray(meta[1,], includeMetaCols = includeMetaCols)
-      mcols(cur_window) <- mc
-      cur_window
-    } else {
-      mc <- mcolStatsArray(ovl, windowSize=windowSize, includeMetaCols=includeMetaCols) # For every metadata window, calculate stats
-      cur_window <- genomeWindows[gw,] # Create annotated GRanges
-      mcols(cur_window) <- mc
-      cur_window
+metaPerWindow <- function(genomeWindows, meta, includeMetaCols=NULL) {
+  idx <- matchToOneBin(meta, genomeWindows)
+  for (name in colnames(mcols(meta))) {
+    data <- mcols(meta)[[name]]
+    if(is.numeric(data)) {
+      mcols(genomeWindows)[[paste0(name, ".count")]]  <- binApply(length, genomeWindows, data, idx)
+      mcols(genomeWindows)[[paste0(name, ".median")]] <- binApply(median, genomeWindows, data, idx, na.rm = TRUE)
+      mcols(genomeWindows)[[paste0(name, ".mean")]]   <- binApply(mean,   genomeWindows, data, idx, na.rm = TRUE)
+      mcols(genomeWindows)[[paste0(name, ".sd")]]     <- binApply(sd,     genomeWindows, data, idx, na.rm = TRUE)
     }
-  })
-  gr <- do.call('c', gwl) # Change list of GRanges to a single GRanges
-  gr
+  }
+  genomeWindows
 }
-(metaPerWindow(genomeWindows=genomeGRToWindows(BSgenomeToGR(genomes$Oki))[10:60,], transcripts$Oki, windowSize=10000)[[1]])
+(metaPerWindow(genomeWindows=tmp, transcripts$Oki))
 
 # Function to do everything
-grWindows <- function(genome=NULL, meta=NULL, windowSize=10000, includeMetaCols=NULL){
+grWindows <- function(genome, meta, windowSize=10000){
   genome <- BSgenomeToGR(genome)                             # Make GRanges from genome
   genome <- genomeGRToWindows(genome, windowSize=windowSize) # Make a windowed GRange from chromosome GRanges
-  mpw <- metaPerWindow(genome, meta, windowSize=windowSize, includeMetaCols=includeMetaCols)
+  mpw <- metaPerWindow(genome, meta)
   mpw
 }
-
-transcripts$Oki <- flagLongShort(transcripts$Oki, longShort$OKI2018.I69)
-transcripts$Osa <- flagLongShort(transcripts$Osa, longShort$OSKA2016v1.9)
-transcripts$Bar <- flagLongShort(transcripts$Bar, longShort$Bar2.p4)
 
 windowSize = 20000
 chrw <- SimpleList()
 chrw$Oki <- grWindows(genome=genomes$Oki, meta=transcripts$Oki, windowSize=windowSize)
-seqlevels(chrw$Oki) <- sort(seqlevels(chrw$Oki))
-
+chrw$Oki <- flagLongShort(chrw$Oki, longShort$OKI2018.I69)
 chrw$Osa <- grWindows(genome=genomes$Osa, meta=transcripts$Osa, windowSize=windowSize)
-seqlevels(chrw$Osa) <- sort(seqlevels(chrw$Osa))
-
+chrw$Osa <- flagLongShort(chrw$Osa, longShort$OKI2018.I69)
 chrw$Bar <- grWindows(genome=genomes$Bar, meta=transcripts$Bar, windowSize=windowSize)
-seqlevels(chrw$Bar) <- sort(seqlevels(chrw$Bar))
-
+chrw$Bar <- flagLongShort(chrw$Bar, longShort$OKI2018.I69)
 ```
 
 ```{r chromosome_plots_1, cache=TRUE, fig.height=6, fig.width=12, message=FALSE, warning=FALSE, dev=c("svg", "png")}
-ggplot(as.data.frame(chrw$Oki)  %>% filter(seqnames %in% c('chr1', 'chr2', 'PAR', 'XSR', 'YSR')) ) + aes(x=start, y=dNdS_PRANK.median) + geom_point() + facet_wrap(seqnames ~ Arm)
+ggplot(as.data.frame(chrw$Oki |> unname())  %>% filter(seqnames %in% c('chr1', 'chr2', 'PAR', 'XSR', 'YSR')) ) + aes(x=start, y=dNdS_PRANK.median) + geom_point() + facet_wrap(seqnames ~ Arm)
 ```
 
 # Session information
@@ -203,5 +166,3 @@ ggplot(as.data.frame(chrw$Oki)  %>% filter(seqnames %in% c('chr1', 'chr2', 'PAR'
 ```{r sessionInfo}
 sessionInfo()
 ```
-
-
