--- a/vignettes/ChromosomePlots.Rmd
+++ b/vignettes/ChromosomePlots.Rmd
@@ -35,9 +35,9 @@ library('dplyr')
 library('ggplot2')
 library('purrr')
 library('viridis') |> suppressPackageStartupMessages()
-(genomes <- OikScrambling:::loadAllGenomes())
-(transcripts <- OikScrambling:::loadAllTranscriptsGR())
-(load("BreakPoints.Rdata"))
+genomes <- OikScrambling:::loadAllGenomes()
+transcripts <- OikScrambling:::loadAllTranscriptsGR()
+load("BreakPoints.Rdata")
 ```
 
 ### Creating chromosome-scale plots
