Add myself as an author.

--- a/vignettes/ChromosomePlots.Rmd
+++ b/vignettes/ChromosomePlots.Rmd
@@ -2,6 +2,7 @@
 title: "Chromosome-scale feature density plots"
 author: 
  - "Michael Mansfield"
+ - "Charles Plessy"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: rmarkdown::html_vignette
 vignette: >
