--- a/vignettes/DistanceMeasures.Rmd
+++ b/vignettes/DistanceMeasures.Rmd
@@ -79,3 +79,12 @@ See `?GenomicBreaks::GOC` for details.
 BiocParallel::bplapply(gbs,                 GOC  ) |> pairs2Kable6x3()
 BiocParallel::bplapply(gbs, \(g) swap(g) |> GOC()) |> pairs2Kable6x3()
 ```
+
+# Strand randomisation index
+
+See `?GenomicBreaks::strand_randomisation_index()` for details.
+
+```{r strand_randomisation_index}
+BiocParallel::bplapply(gbs,                 strand_randomisation_index  ) |> pairs2Kable6x3()
+BiocParallel::bplapply(gbs, \(g) swap(g) |> strand_randomisation_index()) |> pairs2Kable6x3()
+```
